--- a/StorhaugenWebsite/_Imports.razor
+++ b/StorhaugenWebsite/_Imports.razor
@@ -7,4 +7,4 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using StorhaugenWebsite
-@using StorhaugenWebsite.Layout
+@using StorhaugenWebsite.Shared
