--- a/StorhaugenWebsite/_Imports.razor
+++ b/StorhaugenWebsite/_Imports.razor
@@ -6,5 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using MudBlazor
 @using StorhaugenWebsite
-@using StorhaugenWebsite.Shared
+@using StorhaugenWebsite.Models
+@using StorhaugenWebsite.Services
